@@ -6,7 +6,7 @@ Here is your list of images:
 <ul>
     {% for i in range(0,imageCount) %}
     <li type="none">
-        <img style="margin-bottom:25px" height=250px width=250px src='image_raw?special={{ i }}'/>
+        <img style="margin-bottom:25px" src='image_raw?special={{ i }}'/>
     </li>
     {% endfor %}
 </ul>
